✨ Added support for linking webshops to events
fixes STA-697

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5036,7 +5036,7 @@
   "271299b8-7b44-40b8-a4ce-e345abf164cb": "Van welke #groep is deze activiteit?",
   "28d8fecc-3639-467b-90d5-1ac8e82240df": "Acties",
   "26667b28-4e39-4218-9f9b-131bf3bae6ab": "Inschrijvingen activeren",
-  "004bab40-945f-4f6d-8316-b0a8f2748f7a": "Manueel inschrijvingen bijhouden of leden online laten inschrijven.",
+  "004bab40-945f-4f6d-8316-b0a8f2748f7a": "Manueel inschrijvingen bijhouden of leden online laten inschrijven. Hiervoor moet elk ingeschreven lid of ouder een account hebben en alle persoonlijke gegevens aanvullen.",
   "cd37a13c-6779-49fa-a97f-1eddb6b61ebb": "Deze #groep is nog niet actief in dit werkjaar, maak dat eerst aan.",
   "e8050ed2-af7e-4ffd-a9c9-e2fda7ef9bf5": "Inschrijvingen verzamelen voor deze activiteit?",
   "3fa34288-9872-4c2b-af11-2d112b905eef": "Geen paniek, je inschrijvingen gaan nog niet meteen online staan. Je kan inschrijvinen later terug uitschakelen via de algemene instellingen van de activiteit.",
