Updated MemberReadFinancialData description to include uitpas
fixes STA-692

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -3331,7 +3331,7 @@
   "ef892736-b403-4eb5-8e59-662ffbfd1c54": "Rijksregisternummers bekijken of bewerken van leden",
   "a1f2f6e4-7f12-4fa2-abd8-40fb59e8ff9a": "Beheerders met deze toegang krijgen toegang tot alle financiële gegevens van de organisatie, en kunnen overschrijvingen als betaald markeren.",
   "885aa405-e8e4-4dff-a57d-ab967b6ca31e": "Beheerders met deze toegang kunnen openstaande overschrijvingen bekijken en markeren als betaald.",
-  "d87cd793-80a1-4e57-8086-64abdd8e88f3": "Bekijk hoeveel een lid precies heeft betaald of nog moet betalen, en bekijk of het lid recht heeft op een verlaagd tarief.",
+  "d87cd793-80a1-4e57-8086-64abdd8e88f3": "Bekijk hoeveel een lid precies heeft betaald of nog moet betalen, en bekijk of het lid recht heeft op een verlaagd tarief. Hiermee kan je ook het UiTPAS-nummer bekijken indien dit werd ingesteld.",
   "a821c56c-e5de-4505-83ca-25d8a74d3c19": "Voeg openstaande bedragen toe of verwijder ze, en pas de betaalstatus van een lid aan.",
   "f84ae947-6023-4ddd-ae90-93422290494b": "Maak nieuwe activiteiten aan, verwijder ze en wijzig ze.",
   "746b82e0-dfe4-4091-89e1-d2f28659e6f9": "Rijksregisternummers bekijken of bewerken van leden.",
