Added option to disable automatic email confirmations for admin registations
fixes STA-665

--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -9532,7 +9532,7 @@
     "translation": "Registration possible from"
   },
   "7aa7f71d-cd2c-4fb4-b4e6-4085738c1e60": {
-    "original": "Groepinschrijvingen",
+    "original": "Groepsinschrijvingen",
     "translation": "Group registrations"
   },
   "7ab415c5-4e09-4165-89f8-035b80eda1a7": {
