--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2706,7 +2706,7 @@
   "b0d2d30a-f641-473a-91c7-4ab2297f25b1": "Aansluiting is verplicht",
   "272cfcc9-e917-4e74-8952-076b8f2e8b23": "Een lid moet een aansluiting hebben op de dag van de inschrijving.",
   "e7319239-1924-462c-bdfb-b9a29d875c41": "Verplicht andere inschrijving",
-  "7aa7f71d-cd2c-4fb4-b4e6-4085738c1e60": "Groepinschrijvingen",
+  "7aa7f71d-cd2c-4fb4-b4e6-4085738c1e60": "Groepsinschrijvingen",
   "9dc28ec0-750c-464e-95f1-fa55b7cf3390": "Een hoofdbeheerder van een groep kan meerdere leden inschrijven en schiet de betaling voor. De leden betalen vervolgens via een openstaand bedrag het geld terug aan hun groep.",
   "cbe0f7dd-5a88-44a9-8876-2d39f8c8ef10": "Limiteer maximum aantal inschrijvingen (waarvan nu {stock} ingenomen of gereserveerd)",
   "13839d7e-2260-4ded-945f-02e4479ef0d5": "Als er een wachtlijst is ingesteld kunnen de leden op de wachtlijst inschrijven als de groep volzet is.",
@@ -2836,7 +2836,7 @@
   "98d05123-a351-4fb7-a0d7-87f46bcd127d": "Je ontvangt een extra bevestiging via e-mail. Als er in de toekomst gegevens wijzigen kan je die vanaf nu beheren via het ledenportaal.",
   "6f719fff-fd1f-4aee-91c1-605ef3d700e3": "We houden je op de hoogte van jouw status op de wachtlijst.",
   "8ff9d707-c8f8-4d37-85d1-fc578ef31f50": "Jouw betaling is gelukt.",
-  "4bb7718d-8198-41c6-b480-d71cd2eeae8b": "Er werden mogelijks automatische e-mails uitgestuurd als die ingesteld stonden.",
+  "4bb7718d-8198-41c6-b480-d71cd2eeae8b": "Er werden automatische e-mails uitgestuurd als die ingesteld stonden.",
   "444bd147-6a22-4fd5-b1e7-94eab9de9eb3": "We konden de inschrijving niet toevoegen aan je winkelmandje omdat er al andere zaken in staan die niet samen afgerekend kunnen worden. Reken eerst je huidige winkelmandje af, en ga daarna verder met de andere inschrijvingen.",
   "ead74946-05e3-4a81-ba41-5f6cddbc8292": "De inschrijving op de wachtlijst is toegevoegd aan het winkelmandje. Bevestig de inschrijving door het winkelmandje te bevestigen.",
   "fa2ecc9e-94d0-49fb-9968-2227528ef22f": "Inschrijving toegevoegd aan winkelmandje. Ga naar het winkelmandje als je alle inschrijvingen hebt toegevoegd om af te rekenen.",
