--- a/shared/locales/src/machine-fr.json
+++ b/shared/locales/src/machine-fr.json
@@ -9676,7 +9676,7 @@
     "translation": "Inscription possible à partir du"
   },
   "7aa7f71d-cd2c-4fb4-b4e6-4085738c1e60": {
-    "original": "Groepinschrijvingen",
+    "original": "Groepsinschrijvingen",
     "translation": "Inscriptions de groupe"
   },
   "7ab415c5-4e09-4165-89f8-035b80eda1a7": {
